# Korriban

./: Cargo.toml  NOTES.md  README.md
benches/: props.rs
interface/: Cargo.toml  README.md
interface/src/: field.rs
module/: Cargo.toml  README.md
module/cpp/: README.md  field.h  main.cc  wasm.h
module/rust/: Cargo.toml
module/rust/src/: lib.rs
module/src/: lib.rs
runtime/: Cargo.toml  README.md  module.wat
runtime/src/: main.rs  prop.rs  services.rs  space.rs
runtime/src/component/: instance.rs  manifest.rs  mod.rs  template.rs
runtime/src/extensions/: field.rs
runtime/src/field/: mod.rs  reservation.rs  set.rs  types.rs
src/: lib.rs  main.rs  module.wat  prop.rs
src/component/: mod.rs  template.rs
src/extensions/: field.rs
