[package]
name = "korriban"
version = "0.1.0"
authors = ["Daniel Miller (Earthmark) <earthmark.miller@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "0.17.1"
wasmer-runtime = "0.17.1"
cgmath = "0.18.0"
num-traits = "0.2.14"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "props"
harness = false
