[package]
name = "korriban"
version = "0.1.0"
authors = ["Daniel Miller (Earthmark) <earthmark.miller@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "*"
glam = "*"
serde = "*"
serde_yaml = "*"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "props"
harness = false
